--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -454,7 +454,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="router_download_exist">Questo file scaricato esiste già</string>
     <string name="select_download_device">Scegli dispositivo</string>
     <string name="show_check_security_url_check_tip_dialog_title">Sicurezza URL</string>
-    <string name="show_check_security_url_check_tip_dialog_description">"L'indirzzo di questo sito verrà inviato ai server Xiaomi per verificarne la sicurezza. Puoi disattivare questa funzione nelle Impostazioni."</string>
+    <string name="show_check_security_url_check_tip_dialog_description">"L'indirizzo di questo sito verrà inviato ai server Xiaomi per verificarne la sicurezza. Puoi disattivare questa funzione nelle Impostazioni."</string>
     <string name="pref_check_security_url_title">Verifica sicurezza URL</string>
     <string name="pref_check_security_url_summary">Invia ai server Xiaomi per verificarne la sicurezza</string>
     <string name="pref_video_preload_title">Precarica video</string>
