--- a/Italian/main/FileExplorer.apk/res/values-it/strings.xml
+++ b/Italian/main/FileExplorer.apk/res/values-it/strings.xml
@@ -260,7 +260,7 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="petabyteShort">PB</string>
     <string name="fileSizeSuffix">%1$s%2$s</string>
     <string name="tab_local">Locale</string>
-    <string name="sys_size_enable">permetti</string>
+    <string name="sys_size_enable">\u0020permetti</string>
     <string name="menu_list_name">Menu</string>
     <string name="tools">Strumenti</string>
     <string name="category_type_meida">Media</string>
