--- a/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
@@ -38,28 +38,28 @@
     <string name="activate_status_desc_getting_sim_info_fail">Non puoi ottenere le informazioni della scheda SIM</string>
     <string name="sim_unactivated_title">La tua scheda SIM non è attiva</string>
     <string name="activate_popup_title_manual">Attivazione scheda SIM</string>
-    <string name="activate_popup_desc_sim_card">"Ti verrà inviato un SMS per attivare la tua scheda SIM, in modo da poter attivare funzioni come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_intl_sim_card">"Verrà inviato un SMS internazionale per attivare la tua scheda SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_mixed_sim_cards">"Verrà inviato un SMS internazionale per attivare le tue 2 schede SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_2_sim_cards">"2 SMS verranno inviati per attivare le tue 2 schede SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_2_intl_sim_cards">"2 SMS internazionali verranno inviati per attivare la tua scheda SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_sim_card_downlink">Prego inserire il numero della tua scheda SIM, per abilitare funzioni come %s</string>
-    <string name="activate_popup_title_new_sim_card">Attivazione nuova carta SIM</string>
-    <string name="activate_popup_desc_new_sim_card">"La tua scheda SIM è cambiata. Verrà inviato un SMS per attivare la nuova carta SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_intl_sim_card">"La tua scheda SIM è cambiata. Verrà inviato un SMS per attivare la nuova carta SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_mixed_sim_cards">"Le tue schede SIM sono cambiate. Verranno inviati un SMS normale e un SMS internazionale per attivare le 2 nuove carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_2_sim_cards">"Le tue scheda SIM sono cambiate. Verranno inviati due SMS per attivare le 2 nuove carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_2_intl_sim_cards">"Le tue schede SIM sono cambiate. Verranno inviati due SMS internazionali per attivare le 2 carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_sim_card_downlink">La tua scheda SIM è cambiata. Prego inserire il numero della tua carta SIM, in modo da abilitare feature come %s</string>
+    <string name="activate_popup_desc_sim_card">"Verrà inviato un SMS per attivare la tua SIM, in modo da poter attivare funzionalità come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_intl_sim_card">"Verrà inviato un SMS internazionale per attivare la tua SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_mixed_sim_cards">"Verrà inviato un SMS internazionale per attivare le tue 2 SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_2_sim_cards">"2 SMS verranno inviati per attivare le tue 2 SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_2_intl_sim_cards">"2 SMS internazionali verranno inviati per attivare la tua SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_sim_card_downlink">Prego inserire il numero della tua SIM, per abilitare funzionalità come %s</string>
+    <string name="activate_popup_title_new_sim_card">Attivazione nuova  SIM</string>
+    <string name="activate_popup_desc_new_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_intl_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_mixed_sim_cards">"Le tue SIM sono cambiate. Verranno inviati un SMS normale e un SMS internazionale per attivare le 2 nuove SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS per attivare le 2 nuove SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_intl_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS internazionali per attivare le 2 SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_sim_card_downlink">La tua SIM è cambiata. Prego inserire il numero della tua SIM, in modo da abilitare feature come %s</string>
     <string name="activate_popup_title_register_account">Registra account</string>
     <string name="activate_popup_desc_register_account">Verrà inviato un SMS per registrare il tuo account Xiaomi</string>
     <string name="activate_popup_desc_register_account_intl">Verrà inviato un SMS internazionale per registrare il tuo account Xiaomi</string>
-    <string name="activate_popup_desc_register_account_downlink">Prego inserire il numero della tua carta SIM,  per registrare il tuo account Xiaomi</string>
+    <string name="activate_popup_desc_register_account_downlink">Prego inserire il numero della tua SIM,  per registrare il tuo account Xiaomi</string>
     <string name="activate_popup_title_failed_send_sms">Attivazione fallita</string>
-    <string name="activate_popup_desc_failed_send_sms">"Impossibile inviare l'SMS per l'attivazione. Assicurati che la tua carta SIM sia in servizio."</string>
+    <string name="activate_popup_desc_failed_send_sms">"Impossibile inviare l'SMS per l'attivazione. Assicurati che la tua SIM sia in servizio."</string>
     <string name="activate_popup_confirm_failed_send_sms">Rispedisci</string>
     <string name="activate_popup_title_failed_query_info">Attivazione fallita</string>
-    <string name="activate_popup_desc_failed_query_info">Impossibile acquisire il tuo numero di telefono. Assicurati che la tua carta SIM sia in servizio.</string>
+    <string name="activate_popup_desc_failed_query_info">Impossibile acquisire il tuo numero di telefono. Assicurati che la tua SIM sia in servizio.</string>
     <string name="activate_popup_confirm_failed_query_info">Riprova</string>
     <string name="activate_popup_title_failed_server">Attivazione fallita</string>
     <string name="activate_popup_desc_failed_server">Errore del server. Per favore verifica la tua connessione alla rete.</string>
